# bend-dao-bot

./: .env.example  Cargo.toml  Procfile  README.md
data/: repaid-defaulted.json
examples/: alchemy_simulation.rs  change_slot.rs  listen_mempool.rs  mev_share.rs
src/: benddao.rs  benddao_state.rs  chain_provider.rs  coinmarketcap.rs  constants.rs  data_source.rs  global_provider.rs  lib.rs  main.rs  math.rs  prices_client.rs  reservoir.rs  simulator.rs  slack_bot.rs  spoofer.rs  utils.rs
src/benddao/: auction.rs  balances.rs  loan.rs  mod.rs  status.rs
src/coinmarketcap/: price_response.rs
src/constants/: addresses.rs  bend_dao.rs  math.rs  mod.rs
src/reservoir/: floor_response.rs
src/types/: auction.rs  auction_bid.rs  balances.rs  mod.rs  pending_auctions.rs
tests/: auction_liquidate.rs  build_global_state.rs  bundle_creation.rs  event_tests.rs  interest_calcs.rs  local_wallet.rs  math.rs  oracle.rs  parse_contract_events.rs
