[package]
name = "bend-dao-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.37"
dotenv = "0.15.0"
ethers = { version = "2.0.14", features = ["rustls", "ws"] }
eyre = "0.6.12"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }
url = "2.5.0"
log = "0.4.21"
env_logger = "0.11.3"
